2.12 / <not released yet>

 - Fixed
   - QueryMode documentation in configuration file didn't match implementation
     or man page description
 - New
   - Add 95th percentile output as --95%, also available via --alert, --json
     and --xml, requires 5MinuteHours configuration to be set to at least 744
     (work in progress)
   - Database queries resulting in error exit with status 1
   - Show spinning animation at the beginning of -l / --live output line,
     visibility configurable using LiveSpinner configuration option
   - Add --invert-colors option to image output for facilitating for example
     dark mode switching without needing to have multiple separate color
     configurations
   - Add dark mode option to image output example cgi (examples/vnstat.cgi)
   - Add option 4 to QueryMode for selecting summary output of single
     interface regardless of the number of interfaces in the database
   - Add optional mode parameter to -q / --query for overriding QueryMode
     for summary output and for enabling control of summary output style
     regardless of the number of interfaces in the database


2.11 / 19-Aug-2023

 - Fixed
   - Database queries worked only if SQLite double-quoted string (DQS)
     feature (https://www.sqlite.org/quirks.html#dblquote) was enabled
   - Disabling data resolutions in data retention configuration didn't result
     in possibly existing database entries getting removed from the database
   - Disabling data resolutions in data retention configuration didn't result
     in the data resolution getting disabled but instead storing data forever
   - "expr: syntax error" during configure in BSD (pull request by namtsui)
   - Image output summary would show only "no data available" text in case of
     zero total traffic even when the historical data of no traffic could have
     been shown instead
   - Image output "-o -" content could get corrupted due to info, warning and