@@ -1,6 +1,4 @@
 #include "common.h"
-#include "dbsql.h"
-#include "percentile.h"
 #include "dbjson.h"
 
 void showjson(const char *interface, const int ifcount, const char mode, const char *databegin, const char *dataend)
@@ -20,16 +18,9 @@ void showjson(const char *interface, const int ifcount, const char mode, const c
 	if (ifcount) {
 		printf(",");
 	}
-	printf("{");
-	printf("\"name\":\"%s\",", info.name);
-	printf("\"alias\":\"%s\",", info.alias);
 
-	printf("\"created\":{");
-	jsondate(&info.created, 1);
-	printf("},");
-	printf("\"updated\":{");
-	jsondate(&info.updated, 2);
-	printf("},");
+	printf("{");
+	jsoninterfaceinfo(&info);
 
 	if (mode == 'p') {
 		jsonpercentile(&info);
@@ -142,25 +133,14 @@ void jsonpercentile(const interfaceinfo *interface)
 	jsondate(&pdata.dataend, 2);
 	printf("},");
 
-	printf("\"entries\":{\"seen\":%" PRIu32 ",\"expected\":%" PRIu32 ",\"missing\":%" PRIu32 "},", pdata.count, pdata.countexpectation, pdata.countexpectation-pdata.count);
-
-	printf("\"minimum\":{");
-	printf("\"rx_bytes_per_second\":%" PRIu64 ",", (uint64_t)(pdata.minrx / (double)300));
-	printf("\"tx_bytes_per_second\":%" PRIu64 ",", (uint64_t)(pdata.mintx / (double)300));
-	printf("\"total_bytes_per_second\":%" PRIu64 "", (uint64_t)(pdata.min / (double)300));
+	printf("\"entries\":{");
+	printf("\"seen\":%" PRIu32 ",", pdata.count);
+	printf("\"expected\":%" PRIu32 ",", pdata.countexpectation);
+	printf("\"missing\":%" PRIu32 ",", pdata.countexpectation - pdata.count);
+	printf("\"coverage_percentage\":%0.1f", (float)pdata.count / (float)pdata.countexpectation * 100.0);
 	printf("},");
 
-	printf("\"average\":{");
-	printf("\"rx_bytes_per_second\":%" PRIu64 ",", (uint64_t)(pdata.sumrx / (double)(pdata.count * 300)));
-	printf("\"tx_bytes_per_second\":%" PRIu64 ",", (uint64_t)(pdata.sumtx / (double)(pdata.count * 300)));
-	printf("\"total_bytes_per_second\":%" PRIu64 "", (uint64_t)(pdata.sumrx + pdata.sumtx / (double)(pdata.count * 300)));
-	printf("},");
-
-	printf("\"maximum\":{");
-	printf("\"rx_bytes_per_second\":%" PRIu64 ",", (uint64_t)(pdata.maxrx / (double)300));
-	printf("\"tx_bytes_per_second\":%" PRIu64 ",", (uint64_t)(pdata.maxtx / (double)300));
-	printf("\"total_bytes_per_second\":%" PRIu64 "", (uint64_t)(pdata.max / (double)300));
-	printf("},");
+	jsonpercentileminavgmax(&pdata);
 
 	printf("\"95th_percentile\":{");
 	printf("\"rx_bytes_per_second\":%" PRIu64 ",", (uint64_t)(pdata.rxpercentile / (double)300));
@@ -169,6 +149,161 @@ void jsonpercentile(const interfaceinfo *interface)
 	printf("}");
 
 	printf("}");
+}
+
+void jsonpercentileminavgmax(const percentiledata *pdata)
+{
+	printf("\"minimum\":{");
+	printf("\"rx_bytes_per_second\":%" PRIu64 ",", (uint64_t)(pdata->minrx / (double)300));
+	printf("\"tx_bytes_per_second\":%" PRIu64 ",", (uint64_t)(pdata->mintx / (double)300));
+	printf("\"total_bytes_per_second\":%" PRIu64 "", (uint64_t)(pdata->min / (double)300));
+	printf("},");
+
+	printf("\"average\":{");
+	printf("\"rx_bytes_per_second\":%" PRIu64 ",", (uint64_t)(pdata->sumrx / (double)(pdata->count * 300)));
+	printf("\"tx_bytes_per_second\":%" PRIu64 ",", (uint64_t)(pdata->sumtx / (double)(pdata->count * 300)));
+	printf("\"total_bytes_per_second\":%" PRIu64 "", (uint64_t)((pdata->sumrx + pdata->sumtx) / (double)(pdata->count * 300)));
+	printf("},");
+
+	printf("\"maximum\":{");
+	printf("\"rx_bytes_per_second\":%" PRIu64 ",", (uint64_t)(pdata->maxrx / (double)300));
+	printf("\"tx_bytes_per_second\":%" PRIu64 ",", (uint64_t)(pdata->maxtx / (double)300));
+	printf("\"total_bytes_per_second\":%" PRIu64 "", (uint64_t)(pdata->max / (double)300));
+	printf("},");
+}
+
+void jsonalertoutput(const alertdata *adata, const AlertOutput output, const AlertType type, const AlertCondition condition, const uint64_t limit)
+{
+	if (output == AO_Always_Output || (output == AO_Output_On_Estimate && adata->estimateexceeded) || ((output == AO_Output_On_Limit || output == AO_Output_On_Estimate) && adata->limitexceeded)) {
+		jsonheader(JSONALERT);
+		printf("{");
+		jsoninterfaceinfo(&adata->ifaceinfo);
+		if (type != AT_Percentile) {
+			jsonalert(adata, limit);
+		} else {
+			jsonpercentilealert(adata, condition, limit);
+		}
+		printf("}");
+		jsonfooter();
+	}
+}
+
+void jsonalert(const alertdata *adata, const uint64_t limit)
+{
+	double percentage = (double)adata->used / (double)limit * 100.0;
+
+	printf("\"alert\":{");
+	printf("\"type\":\"%s\",", adata->tablename);
+
+	printf("\"%s\":{", adata->tablename);
+	jsondate(&adata->timestamp, 1);
+	printf("},");
+
+	// TODO: estimate missing?
+
+	printf("\"limit\":{");
+	printf("\"exceeded\":");
+	if (adata->limitexceeded) {
+		printf("true,");
+	} else {
+		printf("false,");
+	}
+	printf("\"condition\":\"%s\",", adata->conditionname);
+	printf("\"limit_bytes\":%" PRIu64 ",", limit);
+	printf("\"used_bytes\":%" PRIu64 ",", adata->used);
+	printf("\"used_percentage\":");
+	if (percentage <= 100000.0) {
+		printf("%0.1f,", percentage);
+	} else {
+		printf("100000.0,");
+	}
+	printf("\"remaining_percentage\":");
+	if (percentage >= 100.0) {
+		printf("0.0");
+	} else {
+		printf("%0.1f", 100.0 - percentage);
+	}
+	printf("}");
+
+	printf("}");
+}
+
+void jsonpercentilealert(const alertdata *adata, const AlertCondition condition, const uint64_t limit)
+{
+	double percentage = (double)adata->used / (double)limit * 100.0;
+
+	printf("\"alert\":{");
+	printf("\"type\":\"95th percentile\",");
+
+	printf("\"month\":{");
+	jsondate(&adata->pdata.monthbegin, 1);
+	printf("},");
+
+	printf("\"data_begin\":{");
+	jsondate(&adata->pdata.databegin, 2);
+	printf("},");
+
+	printf("\"data_end\":{");
+	jsondate(&adata->pdata.dataend, 2);
+	printf("},");
+
+	printf("\"limit\":{");
+	printf("\"exceeded\":");
+	if (adata->limitexceeded) {
+		printf("true,");
+	} else {
+		printf("false,");
+	}
+	printf("\"condition\":\"%s\",", adata->conditionname);
+	printf("\"limit_bytes_per_second\":%" PRIu64 ",", limit);
+	printf("\"used_bytes_per_second\":%" PRIu64 ",", adata->used);
+	printf("\"used_percentage\":");
+	if (percentage <= 100000.0) {
+		printf("%0.1f,", percentage);
+	} else {
+		printf("100000.0,");
+	}
+	printf("\"remaining_percentage\":");
+	if (percentage >= 100.0) {
+		printf("0.0");
+	} else {
+		printf("%0.1f", 100.0 - percentage);
+	}
+	printf("},");
+
+	jsonpercentileminavgmax(&adata->pdata);
+
+	printf("\"entries\":{");
+	printf("\"seen\":%" PRIu32 ",", adata->pdata.count);
+	printf("\"expected\":%" PRIu32 ",", adata->pdata.countexpectation);
+	printf("\"missing\":%" PRIu32 ",", adata->pdata.countexpectation - adata->pdata.count);
+	printf("\"coverage_percentage\":%0.1f,", (float)adata->pdata.count / (float)adata->pdata.countexpectation * 100.0);
+	if (condition == AC_RX) {
+		printf("\"over_limit\":%" PRIu32 ",", adata->pdata.countrxoveruserlimit);
+		printf("\"over_limit_percentage\":%0.1f", (float)adata->pdata.countrxoveruserlimit / (float)adata->pdata.count * 100.0);
+	} else if (condition == AC_TX) {
+		printf("\"over_limit\":%" PRIu32 ",", adata->pdata.counttxoveruserlimit);
+		printf("\"over_limit_percentage\":%0.1f", (float)adata->pdata.counttxoveruserlimit / (float)adata->pdata.count * 100.0);
+	} else if (condition == AC_Total) {
+		printf("\"over_limit\":%" PRIu32 ",", adata->pdata.countsumoveruserlimit);
+		printf("\"over_limit_percentage\":%0.1f", (float)adata->pdata.countsumoveruserlimit / (float)adata->pdata.count * 100.0);
+	}
+	printf("}");
+
+	printf("}");
+}
+
+void jsoninterfaceinfo(const interfaceinfo *info)
+{
+	printf("\"name\":\"%s\",", info->name);
+	printf("\"alias\":\"%s\",", info->alias);
+
+	printf("\"created\":{");
+	jsondate(&info->created, 1);
+	printf("},");
+	printf("\"updated\":{");
+	jsondate(&info->updated, 2);
+	printf("},");
 }
 
 void jsondate(const time_t *date, const int type)
@@ -200,9 +335,9 @@ void jsondate(const time_t *date, const int type)
 	printf("\"timestamp\":%" PRId64 "", (uint64_t)*date);
 }
 
-void jsonheader(void)
+void jsonheader(const char *version)
 {
-	printf("{\"vnstatversion\":\"%s\",\"jsonversion\":\"%d\",\"interfaces\":[", getversion(), JSONVERSION);
+	printf("{\"vnstatversion\":\"%s\",\"jsonversion\":\"%s\",\"interfaces\":[", getversion(), version);
 }
 
 void jsonfooter(void)
